# hash-sig-agg

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci-circuit-openvm.yaml  ci-hash-sig.yaml  ci-zkvm-openvm.yaml  ci-zkvm-sp1.yaml
circuit/openvm/: Cargo.toml  bench.sh  profile.json  render_table.py
circuit/openvm/examples/: hash-sig-agg.rs
circuit/openvm/src/: gadget.rs  lib.rs  main.rs  poseidon2.rs  test.rs  util.rs
circuit/openvm/src/gadget/: cycle_bits.rs  cycle_int.rs  is_equal.rs  is_zero.rs  lower_rows_filter.rs  mod.rs  strictly_increasing.rs  test_utils.rs
circuit/openvm/src/poseidon2/: chip.rs  hash_sig.rs  mod.rs
circuit/openvm/src/poseidon2/chip/: chain.rs  decomposition.rs  main.rs  merkle_tree.rs  mod.rs  poseidon2_t24.rs  range_check.rs
circuit/openvm/src/poseidon2/chip/chain/: air.rs  column.rs  generation.rs  mod.rs
circuit/openvm/src/poseidon2/chip/decomposition/: air.rs  column.rs  generation.rs  mod.rs
circuit/openvm/src/poseidon2/chip/main/: air.rs  column.rs  generation.rs  mod.rs
circuit/openvm/src/poseidon2/chip/merkle_tree/: air.rs  column.rs  generation.rs  mod.rs
circuit/openvm/src/poseidon2/chip/poseidon2_t24/: air.rs  column.rs  generation.rs
circuit/openvm/src/poseidon2/chip/range_check/: air.rs  column.rs  generation.rs  mod.rs
circuit/openvm/src/util/: engine.rs  field.rs  mod.rs
circuit/p3-poseidon2-horizon/: Cargo.toml
circuit/p3-poseidon2-horizon/src/: baby_bear.rs  lib.rs
circuit/p3-poseidon2-horizon/src/baby_bear/: constant.rs
circuit/p3-poseidon2-util/: Cargo.toml
circuit/p3-poseidon2-util/src/: air.rs  lib.rs
circuit/p3-poseidon2-util/src/horizon/: baby_bear.rs
circuit/p3-poseidon2-util/src/horizon/baby_bear/: constant.rs
hash-sig/: Cargo.toml
hash-sig-testdata/: Cargo.toml
hash-sig-testdata/src/: lib.rs  main.rs
hash-sig/hash-sig-testdata/: Cargo.toml
hash-sig/hash-sig-testdata/src/: lib.rs
hash-sig/hash-sig-verifier/: Cargo.toml
hash-sig/hash-sig-verifier/src/: instantiation.rs  lib.rs  util.rs
hash-sig/hash-sig-verifier/src/instantiation/: poseidon2.rs  sha3.rs
hash-sig/hash-sig-verifier/src/instantiation/poseidon2/: baby_bear_horizon.rs  koala_bear_horizon.rs
hash-sig/hash-sig-verifier/src/instantiation/target_sum/: poseidon2.rs
hash-sig/p3-poseidon2-util/: Cargo.toml
hash-sig/p3-poseidon2-util/src/: air.rs
hash-sig/p3-poseidon2-util/src/air/: generation.rs
hash-sig/p3-poseidon2-util/src/instantiation/: horizon.rs
hash-sig/p3-poseidon2-util/src/instantiation/horizon/: baby_bear.rs  koala_bear.rs
hash-sig/p3-poseidon2-util/src/instantiation/horizon/baby_bear/: constant.rs
hash-sig/p3-poseidon2-util/src/instantiation/horizon/koala_bear/: constant.rs
hash-sig/src/: instantiation.rs  lib.rs
hash-sig/src/instantiation/: poseidon2.rs  sha3.rs
hash-sig/src/instantiation/poseidon2/: baby_bear_horizon.rs  koala_bear_horizon.rs
p3-poseidon2-util/: Cargo.toml
p3-poseidon2-util/src/instantiation/: horizon.rs
p3-poseidon2-util/src/instantiation/horizon/koala_bear/: constant.rs
testdata/keccak256/: 1  1024  128  16  2  256  32  4  512  64  8
testdata/poseidon2/: 1  1024  128  16  2  256  32  4  512  64  8
testdata/sha3/: 1  1024  128  16  2  256  32  4  512  64  8
zkvm/openvm/: .gitignore  Cargo.toml
zkvm/openvm/keccak256/: Cargo.toml
zkvm/openvm/keccak256/src/: hash_sig.rs  main.rs
zkvm/openvm/poseidon2/: Cargo.toml
zkvm/openvm/poseidon2-baby-bear/: Cargo.toml
zkvm/openvm/poseidon2-baby-bear/src/: main.rs
zkvm/openvm/poseidon2/src/: hash_sig.rs  main.rs
zkvm/openvm/script/: Cargo.toml
zkvm/openvm/script/src/: main.rs
zkvm/sp1/: Cargo.toml
zkvm/sp1/poseidon2/: Cargo.toml
zkvm/sp1/poseidon2-baby-bear/: Cargo.toml
zkvm/sp1/poseidon2-baby-bear/src/: main.rs
zkvm/sp1/poseidon2/src/: hash_sig.rs  main.rs
zkvm/sp1/script/: Cargo.toml  build.rs
zkvm/sp1/script/src/: main.rs
zkvm/sp1/sha3/: Cargo.toml
zkvm/sp1/sha3/src/: hash_sig.rs  main.rs
