[workspace]
members = ["hash-sig", "hash-sig-testdata", "p3-poseidon2-util"]
resolver = "2"

[workspace.dependencies]
bincode = "1.3.3"
num-bigint = "0.4.6"
p3-baby-bear = { git = "https://github.com/Plonky3/Plonky3.git", rev = "b0591e9" }
p3-field = { git = "https://github.com/Plonky3/Plonky3.git", rev = "b0591e9" }
p3-koala-bear = { git = "https://github.com/Plonky3/Plonky3.git", rev = "b0591e9" }
p3-poseidon2 = { git = "https://github.com/Plonky3/Plonky3.git", rev = "b0591e9" }
p3-poseidon2-air = { git = "https://github.com/Plonky3/Plonky3.git", rev = "b0591e9" }
p3-symmetric = { git = "https://github.com/Plonky3/Plonky3.git", rev = "b0591e9" }
rand = "0.8.5"
rayon = "1.10.0"
serde = "1"
serde-big-array = "0.5.1"
sha3 = "0.10.8"
zkhash = { git = "https://github.com/HorizenLabs/poseidon2", branch = "main", package = "zkhash" }

hash-sig = { path = "hash-sig" }
hash-sig-testdata = { path = "hash-sig-testdata" }
p3-poseidon2-util = { path = "p3-poseidon2-util" }
