[package]
name = "hash-sig-testdata"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = { workspace = true }
hash-sig = { workspace = true }
num-bigint = { workspace = true }
p3-baby-bear = { workspace = true }
p3-field = { workspace = true }
p3-koala-bear = { workspace = true }
p3-poseidon2 = { workspace = true }
p3-poseidon2-util = { workspace = true }
p3-symmetric = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde-big-array = { workspace = true }
sha3 = { workspace = true }
