[workspace]
members = ["hash-sig-verifier", "hash-sig-testdata", "p3-poseidon2-util"]
resolver = "2"

[workspace.lints.clippy]
# all lints that are on by default (correctness, suspicious, style, complexity, perf)
all = { level = "warn", priority = -1 }

# new lints that are still under development
nursery = { level = "warn", priority = -1 }

# lints which are rather strict or have occasional false positives
pedantic = { level = "warn", priority = -1 }
# avoid lints that are too pedantic
must_use_candidate = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
default_trait_access = "allow"
module_name_repetitions = "allow"
debug_assert_with_mut_call = "allow"
doc_markdown = "allow"
unreadable_literal = "allow"

[workspace.dependencies]
bincode = "1.3.3"
num-bigint = "0.4.6"
p3-baby-bear = { git = "https://github.com/Plonky3/Plonky3.git", rev = "b0591e9" }
p3-field = { git = "https://github.com/Plonky3/Plonky3.git", rev = "b0591e9" }
p3-koala-bear = { git = "https://github.com/Plonky3/Plonky3.git", rev = "b0591e9" }
p3-poseidon2 = { git = "https://github.com/Plonky3/Plonky3.git", rev = "b0591e9" }
p3-poseidon2-air = { git = "https://github.com/Plonky3/Plonky3.git", rev = "b0591e9" }
p3-symmetric = { git = "https://github.com/Plonky3/Plonky3.git", rev = "b0591e9" }
rand = "0.8.5"
rayon = "1.10.0"
serde = "1"
serde-big-array = "0.5.1"
sha3 = "0.10.8"
zkhash = { git = "https://github.com/HorizenLabs/poseidon2", branch = "main", package = "zkhash" }
hashsig = { git = "https://github.com/han0110/hash-sig", branch = "feature/alt-tweak-encoding" }

hash-sig-verifier = { path = "hash-sig-verifier" }
hash-sig-testdata = { path = "hash-sig-testdata" }
p3-poseidon2-util = { path = "p3-poseidon2-util" }
