[workspace]

[package]
name = "openvm"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = "0.14.0"
num-bigint = "0.4.6"
openvm-stark-backend = { git = "https://github.com/openvm-org/stark-backend", tag = "v1.0.0-rc.0" }
openvm-stark-sdk = { git = "https://github.com/openvm-org/stark-backend", tag = "v1.0.0-rc.0" }
p3-baby-bear = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-dft = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-fri = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-maybe-rayon = { git = "https://github.com/Plonky3//Plonky3.git", features = ["parallel"] }
p3-merkle-tree = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-poseidon2 = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-poseidon2-air = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-symmetric = { git = "https://github.com/Plonky3/Plonky3.git" }

hash-sig = { path = "../../hash-sig" }
p3-poseidon2-util = { path = "../../p3-poseidon2-util", features = ["air"] }

[dev-dependencies]
bincode = "1.3.3"
tracing-forest = { version = "0.1.6", features = ["smallvec"] }
tracing-subscriber = { version = "0.3.17", features = ["std", "env-filter"] }

[patch."https://github.com/Plonky3/Plonky3.git"]
p3-air = { git = "https://github.com/Plonky3//Plonky3.git", rev = "b0591e9" }
p3-baby-bear = { git = "https://github.com/Plonky3//Plonky3.git", rev = "b0591e9" }
p3-challenger = { git = "https://github.com/Plonky3//Plonky3.git", rev = "b0591e9" }
p3-commit = { git = "https://github.com/Plonky3//Plonky3.git", rev = "b0591e9" }
p3-dft = { git = "https://github.com/Plonky3//Plonky3.git", rev = "b0591e9" }
p3-field = { git = "https://github.com/Plonky3//Plonky3.git", rev = "b0591e9" }
p3-fri = { git = "https://github.com/Plonky3//Plonky3.git", rev = "b0591e9" }
p3-matrix = { git = "https://github.com/Plonky3//Plonky3.git", rev = "b0591e9" }
p3-maybe-rayon = { git = "https://github.com/Plonky3//Plonky3.git", rev = "b0591e9" }
p3-mds = { git = "https://github.com/Plonky3//Plonky3.git", rev = "b0591e9" }
p3-merkle-tree = { git = "https://github.com/Plonky3//Plonky3.git", rev = "b0591e9" }
p3-poseidon2 = { git = "https://github.com/Plonky3//Plonky3.git", rev = "b0591e9" }
p3-poseidon2-air = { git = "https://github.com/Plonky3//Plonky3.git", rev = "b0591e9" }
p3-symmetric = { git = "https://github.com/Plonky3//Plonky3.git", rev = "b0591e9" }
p3-uni-stark = { git = "https://github.com/Plonky3//Plonky3.git", rev = "b0591e9" }
