[package]
name = "hash-sig-agg-circuit-openvm"
version = "0.1.0"
edition = "2021"

[lints.clippy]
# all lints that are on by default (correctness, suspicious, style, complexity, perf)
all = { level = "warn", priority = -1 }

# new lints that are still under development
nursery = { level = "warn", priority = -1 }

# lints which are rather strict or have occasional false positives
pedantic = { level = "warn", priority = -1 }
# avoid lints that are too pedantic
must_use_candidate = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
default_trait_access = "allow"
module_name_repetitions = "allow"
debug_assert_with_mut_call = "allow"
doc_markdown = "allow"

[dependencies]
itertools = "0.14.0"
openvm-stark-backend = { git = "https://github.com/openvm-org/stark-backend", tag = "v1.0.0-rc.0" }
openvm-stark-sdk = { git = "https://github.com/openvm-org/stark-backend", tag = "v1.0.0-rc.0" }
p3-air = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-baby-bear = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-challenger = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-commit = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-dft = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-field = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-fri = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-koala-bear = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-matrix = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-maybe-rayon = { git = "https://github.com/Plonky3//Plonky3.git", features = ["parallel"] }
p3-merkle-tree = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-poseidon2 = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-poseidon2-air = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-sha256 = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-symmetric = { git = "https://github.com/Plonky3/Plonky3.git" }

hash-sig-verifier = { path = "../../hash-sig/hash-sig-verifier" }
p3-poseidon2-util = { path = "../../hash-sig/p3-poseidon2-util", features = ["air"] }

[dev-dependencies]
bincode = "1.3.3"
tracing-forest = { version = "0.1.6", features = ["smallvec"] }
tracing-subscriber = { version = "0.3.17", features = ["std", "env-filter"] }

hash-sig-testdata = { path = "../../hash-sig/hash-sig-testdata" }

[patch."https://github.com/Plonky3/Plonky3.git"]
p3-air = { git = "https://github.com/Plonky3//Plonky3.git", rev = "b0591e9" }
p3-baby-bear = { git = "https://github.com/Plonky3//Plonky3.git", rev = "b0591e9" }
p3-challenger = { git = "https://github.com/Plonky3//Plonky3.git", rev = "b0591e9" }
p3-commit = { git = "https://github.com/Plonky3//Plonky3.git", rev = "b0591e9" }
p3-dft = { git = "https://github.com/Plonky3//Plonky3.git", rev = "b0591e9" }
p3-field = { git = "https://github.com/Plonky3//Plonky3.git", rev = "b0591e9" }
p3-fri = { git = "https://github.com/Plonky3//Plonky3.git", rev = "b0591e9" }
p3-koala-bear = { git = "https://github.com/Plonky3//Plonky3.git", rev = "b0591e9" }
p3-matrix = { git = "https://github.com/Plonky3//Plonky3.git", rev = "b0591e9" }
p3-maybe-rayon = { git = "https://github.com/Plonky3//Plonky3.git", rev = "b0591e9" }
p3-mds = { git = "https://github.com/Plonky3//Plonky3.git", rev = "b0591e9" }
p3-merkle-tree = { git = "https://github.com/Plonky3//Plonky3.git", rev = "b0591e9" }
p3-poseidon2 = { git = "https://github.com/Plonky3//Plonky3.git", rev = "b0591e9" }
p3-poseidon2-air = { git = "https://github.com/Plonky3//Plonky3.git", rev = "b0591e9" }
p3-sha256 = { git = "https://github.com/Plonky3//Plonky3.git", rev = "b0591e9" }
p3-symmetric = { git = "https://github.com/Plonky3//Plonky3.git", rev = "b0591e9" }
p3-uni-stark = { git = "https://github.com/Plonky3//Plonky3.git", rev = "b0591e9" }

[profile.ci]
inherits = "release"
debug-assertions = true
