[package]
name = "p3-poseidon2-horizon"
version = "0.1.0"
edition = "2021"

[dependencies]
p3-baby-bear = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-field = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-poseidon2 = { git = "https://github.com/Plonky3/Plonky3.git" }

[dev-dependencies]
p3-symmetric = { git = "https://github.com/Plonky3/Plonky3.git" }
rand = "0.8.5"
zkhash = { git = "https://github.com/HorizenLabs/poseidon2", branch = "main", package = "zkhash" }
