[workspace]
members = ["poseidon2", "sha3", "script"]
resolver = "2"

[workspace.dependencies]
clap = "4.5"
num-bigint = "0.4.6"
sha3 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha3", tag = "sha3-v0.10.8-patch-v1" }
sp1-helper = "4.0.0-rc.9"
sp1-sdk = "4.0.0-rc.9"
sp1-zkvm = "4.0.0-rc.9"
zkhash = { git = "https://github.com/HorizenLabs/poseidon2", branch = "main", package = "zkhash" }
