[workspace]
members = ["poseidon2", "sha3", "script"]
resolver = "2"

[workspace.dependencies]
bincode = "1.3.3"
clap = "4.5"
hash-sig = { path = "../../hash-sig" }
sp1-helper = "4.1.0"
sp1-sdk = "4.1.0"
sp1-zkvm = "4.1.0"

[patch.crates-io]
sha3 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha3", tag = "sha3-v0.10.8-patch-v1" }
