[package]
name = "openvm-script"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { workspace = true, features = ["derive"] }
openvm-build = { workspace = true }
openvm-circuit = { workspace = true }
openvm-sdk = { workspace = true }
openvm-stark-sdk = { workspace = true }
openvm-transpiler = { workspace = true }
