[package]
name = "hash-sig-agg-zkvm-sp1-script"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = { workspace = true }
clap = { workspace = true, features = ["derive"] }
hash-sig-testdata = { workspace = true }
hash-sig-verifier = { workspace = true }
sp1-sdk = { workspace = true }

[build-dependencies]
sp1-helper = { workspace = true }
